update job detail parameter definition
