# drivers/api/docs/swagger.json
@@ -2046,6 +2046,7 @@
             "type": "object",
             "properties": {
                 "binlog_relay": {
+                    "description": "todo oracle逻辑实现后删除",
                     "type": "boolean"
                 },
                 "chunk_size": {
@@ -2065,6 +2066,9 @@
                 },
                 "group_timeout": {
                     "type": "integer"
+                },
+                "my_sql_config": {
+                    "$ref": "#/definitions/models.MySQLConfig"
                 },
                 "parallel_workers": {
                     "type": "integer"
@@ -2087,13 +2091,13 @@
             "type": "object",
             "properties": {
                 "dst_data_base": {
-                    "$ref": "#/definitions/models.MysqlConnectionConfig"
+                    "$ref": "#/definitions/models.DatabaseConnectionConfig"
                 },
                 "dst_kafka": {
                     "$ref": "#/definitions/models.KafkaDestTaskConfig"
                 },
                 "src_data_base": {
-                    "$ref": "#/definitions/models.MysqlConnectionConfig"
+                    "$ref": "#/definitions/models.DatabaseConnectionConfig"
                 }
             }
         },
@@ -2390,6 +2394,29 @@
                 }
             }
         },
+        "models.DatabaseConnectionConfig": {
+            "type": "object",
+            "properties": {
+                "database_type": {
+                    "type": "string"
+                },
+                "host": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "string"
+                }
+            }
+        },
         "models.DelayCount": {
             "type": "object",
             "properties": {
@@ -2440,7 +2467,7 @@
                 },
                 "mysql_connection_config": {
                     "description": "todo 代码梳理后删除以下字段",
-                    "$ref": "#/definitions/models.MysqlConnectionConfig"
+                    "$ref": "#/definitions/models.DatabaseConnectionConfig"
                 },
                 "mysql_dest_task_config": {
                     "$ref": "#/definitions/models.MysqlDestTaskConfig"
@@ -2672,20 +2699,20 @@
                 }
             }
         },
-        "models.MysqlConnectionConfig": {
+        "models.MySQLConfig": {
             "type": "object",
             "properties": {
-                "host": {
-                    "type": "string"
+                "binlog_relay": {
+                    "type": "boolean"
                 },
-                "password": {
-                    "type": "string"
-                },
-                "port": {
+                "dependency_history_size": {
                     "type": "integer"
                 },
-                "user": {
-                    "type": "string"
+                "parallel_workers": {
+                    "type": "integer"
+                },
+                "use_my_sql_dependency": {
+                    "type": "boolean"
                 }
             }
         },
@@ -2716,7 +2743,7 @@
                     "type": "string"
                 },
                 "mysql_connection_config": {
-                    "$ref": "#/definitions/models.MysqlConnectionConfig"
+                    "$ref": "#/definitions/models.DatabaseConnectionConfig"
                 },
                 "wait_on_job": {
                     "type": "string"
@@ -2849,37 +2876,14 @@
                 }
             }
         },
-        "models.OracleConnectionConfig": {
-            "type": "object",
-            "properties": {
-                "host": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "port": {
-                    "type": "integer"
-                },
-                "scn": {
-                    "type": "integer"
-                },
-                "user": {
-                    "type": "string"
-                }
-            }
-        },
         "models.OracleSrcTaskConfig": {
             "type": "object",
             "properties": {
                 "oracle_connection_config": {
-                    "$ref": "#/definitions/models.OracleConnectionConfig"
+                    "$ref": "#/definitions/models.DatabaseConnectionConfig"
                 },
                 "scn": {
                     "type": "integer"
-                },
-                "service_name": {
-                    "type": "string"
                 }
             }
         },
@@ -3065,7 +3069,7 @@
                     "type": "string"
                 },
                 "mysql_connection_config": {
-                    "$ref": "#/definitions/models.MysqlConnectionConfig"
+                    "$ref": "#/definitions/models.DatabaseConnectionConfig"
                 },
                 "mysql_src_task_config": {
                     "$ref": "#/definitions/models.MysqlSrcTaskConfig"
